Jólakötturinn er kominn á kreik

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-  <h2>Main Page</h2>
-
-  Main content goes here. 
+	<h2>Main Page</h2>
+	<img src="img/jolakottur01.jpg" title="Jóla hvað?">
+  	<p>Með kveðju frá jólakettinum.</p> 
